Todo Ok con consumers

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -44,8 +44,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${reference.Hotel1Consumer.jar}:\
-    ${reference.Hotel2Consumer.jar}:\
-    ${reference.Hotel3Consumer.jar}
+    ${reference.Hotel3Consumer.jar}:\
+    ${reference.Hotel2Consumer.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -76,9 +76,9 @@ javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
-project.Hotel1Consumer=../Hotel1Consumer
-project.Hotel2Consumer=../Hotel2Consumer
-project.Hotel3Consumer=../Hotel3Consumer
+project.Hotel1Consumer=../../Hotel1Consumer
+project.Hotel2Consumer=../../Hotel2Consumer
+project.Hotel3Consumer=../../Hotel3Consumer
 reference.Hotel1Consumer.jar=${project.Hotel1Consumer}/dist/Hotel1Consumer.jar
 reference.Hotel2Consumer.jar=${project.Hotel2Consumer}/dist/Hotel2Consumer.jar
 reference.Hotel3Consumer.jar=${project.Hotel3Consumer}/dist/Hotel3Consumer.jar
